# rsql

./: .gitignore  .txt  Cargo.toml  README.md  hi.db  main.rs  mom.db  notes.md
lazysql/: Cargo.toml  README.md
lazysql-core/: Cargo.toml
lazysql-core/src/: lib.rs
lazysql-core/src/errors/: connection.rs  mod.rs
lazysql-core/src/internal_sqlite/: dynamic_rows.rs  lazy_connection.rs  lazy_statement.rs  mod.rs  preparred_statement.rs  rows_dao.rs
lazysql-core/src/traits/: dynamic.rs  from_sql.rs  mod.rs  row_mapper.rs  to_sql.rs
lazysql-core/src/utility/: utils.rs
lazysql/src/: lib.rs
lazysql_macros/: Cargo.toml
lazysql_macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: compile_time_check.rs  execute.rs  lib.rs  mapping.rs  query.rs  sql.rs  utility.rs  utils.rs
rsql/: Cargo.toml
rsql-core/: Cargo.toml  asd.db
rsql-core/src/: lib.rs  note.md
rsql-core/src/errors/: connection.rs  mod.rs  open.rs  row.rs  statement.rs
rsql-core/src/internal_sqlite/: connection.rs  connection_test.rs  lazy_connection.rs  lazy_statement.rs  mod.rs  preparred_statement.rs  row.rs  rows_dao.rs  statement.rs  statement_test.rs
rsql-core/src/internal_sqlite/efficient/: lazy_connection.rs  lazy_statement.rs  mod.rs  preparred_statement.rs  rows_dao.rs
rsql-core/src/internal_sqlite/ergonomic/: connection.rs  mod.rs  row.rs  statement.rs
rsql-core/src/traits/: from_sql.rs  mod.rs  row_mapper.rs  to_sql.rs
rsql-core/src/utility/: error.rs  utils.rs
rsql/src/: lib.rs  note.md
rsql/src/internal_sqlite/: column.rs  connection.rs  connection_test.rs  mod.rs  row.rs  statement.rs  statement_test.rs
rsql/src/traits/: from_sql.rs  mod.rs  rsql.rs  to_sql.rs
rsql/src/utility/: error.rs  utils.rs
sql_mapping/: Cargo.toml
sqlite_operations/: finalise.rs  mod.rs
src/: connection.rs  error.rs  lib.rs  main.rs  note.md  prepare.rs  row.rs  run_statements.rs  statement.rs  to_sql.rs  utils.rs
src/sqlite_operations/: connection.rs  prepare.rs  utils.rs
test_macro/: .rs  Cargo.toml  hi.db
test_macro/src/: main.rs
test_main/: Cargo.toml  hi.sqbpro
test_main/src/: .md  his.db  main.rs
tests/: .rs  Cargo.toml  oi.db  test.sql
tests/src/: becnh.rs  dao_stress_test.rs  lib.rs  main.rs  reliability.rs
type_inference/: .sql  .txt  Cargo.toml  README.md  notes.md
type_inference/src/: binding_patterns.rs  expr.rs  lib.rs  main.rs  pg_type_cast_to_sqlite.rs  possibilities.md  select_patterns.rs  table.rs
type_inference/tests/: ai_tests.rs  binding_test.rs  select_and_binding_test.rs  select_test.rs
