[workspace]
resolver = "3"
members = [
    "lazysql",
    "lazysql-core",
    "lazysql_macros",
    "type_inference",
    "tests"
]

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"


[workspace.dependencies]
lazysql ={ path = "./lazysql", version = "0.1.6"}
lazysql-core = { path = "./lazysql-core", version = "0.1.6" }
lazysql_macros = { path = "./lazysql_macros", version = "0.1.6" }
type_inference = { path = "./type_inference", version = "0.1.6" }