[workspace]
resolver = "3"
members = [
    "lazysql",
    "lazysql-core",
    "lazysql_macros",
    "type_inference",
    "tests"
]

[workspace.package]
version = "0.1.18"
edition = "2024"
license = "MIT"


[workspace.dependencies]
lazysql ={ path = "./lazysql", version = "0.1.18"}
lazysql-core = { path = "./lazysql-core", version = "0.1.18" }
lazysql_macros = { path = "./lazysql_macros", version = "0.1.18" }
type_inference = { path = "./type_inference", version = "0.1.18" }