[package]
name = "lazysql"
version = "0.1.0"
edition = "2024"
description = "An ergonomic sqlite library with compile time guarantees"
readme = "../README.md"
homepage = "https://github.com/Nareshix/LazySql"
repository = "https://github.com/Nareshix/LazySql"
license = "MIT"
keywords = ["database", "sqlite", "sql", "ergonomic", "compile time check"]
categories = ["database", "database-implementations", "embedded", "rust-patterns"]


[dependencies]
lazysql-core = { version = "0.1.1", path = "../lazysql-core" }
lazysql_macros = { path = "../lazysql_macros", version = "0.1.0"}
