[package]
name = "lazysql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "An ergonomic sqlite library with compile time guarantees"
readme = "../README.md"
homepage = "https://github.com/Nareshix/LazySql"
repository = "https://github.com/Nareshix/LazySql"
keywords = ["database", "sqlite", "sql", "ergonomic"]
categories = ["database", "database-implementations", "embedded"]
documentation = "https://docs.rs/lazysql/latest/lazysql"

[dependencies]
lazysql-core.workspace = true
lazysql_macros.workspace = true
