[package]
name = "lazysql_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macro for lazysql"


[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.109", features = ["full"]}
quote = "1.0.42"
proc-macro2 = "1.0.103"
sqlformat = "0.5.0"
lazysql-core.workspace = true
type_inference.workspace = true