[package]
name = "macros"
version = "0.1.0"
edition = "2024"
description = "macro for lazysql"
license = "MIT"


[lib]
proc-macro = true

[dependencies]
syn = {version = "2.0.109", features = ["full"]}
quote = "1.0.42"
proc-macro2 = "1.0.103"
lazysql-core = { path = "../lazysql-core", version = "0.1.0"}
sqlformat = "0.5.0"
type_inference ={ path = "../type_inference", version = "0.1.0"}